# qrcode-game

./: .gitignore  build.ps1  game.toml
assets/: index.html
client/: Cargo.toml  bootstrap.js  main.js  package.json  qrcode.js  tailwind.config.js  webpack.config.js
client/css/: main.css
client/js/: game.js  qrcode.js
client/src/: app.rs  display.rs  header.rs  lib.rs  scan.rs
client/static/: index.html
common/: Cargo.toml
common/src/: lib.rs
server/: Cargo.toml
server/src/: main.rs
