[package]
categories = ["gui", "wasm", "web-programming"]
edition = "2018"
name = "qrcode-colo"
readme = "README.md"
version = "0.1.0"

[lib]
crate-type = ["cdylib"]

[dependencies]
wasm-bindgen = "^0.2"
js-sys = "0.3.55"
wasm-bindgen-futures = "0.4.28"
yew = "^0.18"
common = {path = "../common"}

[dependencies.web-sys]
version = "0.3.4"
features = [
    'Headers',
    'Request',
    'RequestInit',
    'RequestMode',
    'Response',
    'Window',
]